<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account_id">Account ID</string>
    <string name="active_value">Active Value</string>
    <string name="app_name">HereLink Settings</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="btn_do_hwjscal">HW JS CAL</string>
    <string name="btn_do_hwwheelcal">HW Wheel Cal</string>
    <string name="btn_do_jscal">SBUS Out Cal</string>
    <string name="btn_request_freq_negotiation">Pair</string>
    <string name="btn_save">Save</string>
    <string name="channel_description">Radio Status</string>
    <string name="channel_name">RadioStatus</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="cmd_type">Command Type:</string>
    <string name="cmd_value">Command Value:</string>
    <string name="connect">Connect</string>
    <string name="country_setting">Country</string>
    <string name="ctrl_signal_strength">Controller signal strength:</string>
    <string name="d2d_bw_config_fail">bandwidth configure failed</string>
    <string name="d2d_bw_config_success">bandwidth configure successfully</string>
    <string name="d2d_config_command_dl_frequency">downlink frequency point</string>
    <string name="d2d_config_command_err">command response error</string>
    <string name="d2d_config_command_id">command type</string>
    <string name="d2d_config_command_id_err">command id error</string>
    <string name="d2d_config_command_parameter">command value</string>
    <string name="d2d_config_command_parameter_err">command parameter error</string>
    <string name="d2d_config_command_success">success</string>
    <string name="d2d_config_command_ul_frequency">uplink frequency point</string>
    <string name="d2d_freq_hopping_ctrl_fail">frequency hopping setting failed</string>
    <string name="d2d_freq_hopping_ctrl_success">frequency hopping setting successfully</string>
    <string name="d2d_freq_negotiation_fail">Negotiation timed out, please try again</string>
    <string name="d2d_freq_negotiation_started">Hold Pair/Reset button on Air Unit until LED2 blinks</string>
    <string name="d2d_freq_negotiation_success">Pairing Successful</string>
    <string name="d2d_freq_reset_fail">frequency point reset failed</string>
    <string name="d2d_freq_reset_success">frequency point reset successfully</string>
    <string name="d2d_get_freq_hop_state_fail">fail to get frequency hopping state</string>
    <string name="d2d_set_freq_hopping_err">set frequency hopping error</string>
    <string name="d2d_set_radio_power_err">set radio power error</string>
    <string name="disconnect">Disconnect</string>
    <string name="dl_bandwidth">Downlink bandwidth:</string>
    <string name="dl_freq_point">Downlink frequency point:</string>
    <string name="downlink_anti_interference">Downlink frequency anti-interference tuning</string>
    <string name="downlink_freq_hopping">Downlink Frequeny hopping</string>
    <string name="ds_account_id">DroneShare Account ID</string>
    <string name="ds_account_token">DroneShare Account Token</string>
    <string name="ds_terms">Agree to Terms And Privacy of https://droneshare.cubepilot.com</string>
    <string name="ds_terms2">Agree to send data to DroneShare server</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fly_distance">Fly Distance</string>
    <string name="get">Get</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="hint_cmd_type">Command Type</string>
    <string name="hint_cmd_value">Command Value</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="iface_dev_setting">Interface device setting:</string>
    <string name="js_cal_state">Calibration State</string>
    <string name="js_calibrated">Calibrated</string>
    <string name="js_calibrating">Calibrating</string>
    <string name="js_uncalibrated">Uncalibrated</string>
    <string name="mtrl_badge_numberless_content_description">New notification</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="mtrl_exceed_max_badge_number_suffix">%1$d%2$s</string>
    <string name="mtrl_picker_a11y_next_month">Change to next month</string>
    <string name="mtrl_picker_a11y_prev_month">Change to previous month</string>
    <string name="mtrl_picker_announce_current_selection">Current selection: %1$s</string>
    <string name="mtrl_picker_cancel">@android:string/cancel</string>
    <string name="mtrl_picker_confirm">@android:string/ok</string>
    <string name="mtrl_picker_date_header_selected">%1$s</string>
    <string name="mtrl_picker_date_header_title">Select a Date</string>
    <string name="mtrl_picker_date_header_unselected">Selected date</string>
    <string name="mtrl_picker_day_of_week_column_header">Column of days: %1$s</string>
    <string name="mtrl_picker_invalid_format">Invalid format.</string>
    <string name="mtrl_picker_invalid_format_example">Example: %1$s</string>
    <string name="mtrl_picker_invalid_format_use">Use: %1$s</string>
    <string name="mtrl_picker_invalid_range">Invalid range.</string>
    <string name="mtrl_picker_navigate_to_year_description">Navigate to year %1$s</string>
    <string name="mtrl_picker_out_of_range">Out of range: %1$s</string>
    <string name="mtrl_picker_range_header_only_end_selected">Start date – %1$s</string>
    <string name="mtrl_picker_range_header_only_start_selected">%1$s – End date</string>
    <string name="mtrl_picker_range_header_selected">%1$s – %2$s</string>
    <string name="mtrl_picker_range_header_title">Select a Date Range</string>
    <string name="mtrl_picker_range_header_unselected">Start date – End date</string>
    <string name="mtrl_picker_save">Save</string>
    <string name="mtrl_picker_text_input_date_hint">Date</string>
    <string name="mtrl_picker_text_input_date_range_end_hint">End date</string>
    <string name="mtrl_picker_text_input_date_range_start_hint">Start date</string>
    <string name="mtrl_picker_text_input_day_abbr">d</string>
    <string name="mtrl_picker_text_input_month_abbr">m</string>
    <string name="mtrl_picker_text_input_year_abbr">y</string>
    <string name="mtrl_picker_toggle_to_calendar_input_mode">Switch to calendar input mode</string>
    <string name="mtrl_picker_toggle_to_day_selection">Tap to switch to selecting a day</string>
    <string name="mtrl_picker_toggle_to_text_input_mode">Switch to text input mode</string>
    <string name="mtrl_picker_toggle_to_year_selection">Tap to switch to selecting a year</string>
    <string name="notify_test_content">Hello World</string>
    <string name="notify_title">Radio Status</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="str_btn_do_new">New</string>
    <string name="str_controller_signal_strength">controller signal strength</string>
    <string name="str_d2d_config_command_id_example">e.g. B0000040</string>
    <string name="str_d2d_config_command_parameter_example">e.g. 016F9A1A</string>
    <string name="str_d2d_config_dl_bandwidth">downlink bandwidth</string>
    <string name="str_d2d_config_dl_freq_hop">downlink frequency anti-interference tuning</string>
    <string name="str_d2d_config_freq_updt_ctrl">automatic frequency point selection</string>
    <string name="str_d2d_config_frequency_example">e.g. 47400</string>
    <string name="str_d2d_config_iface_dev">D2D iface device setting</string>
    <string name="str_d2d_config_radio_power">radio power</string>
    <string name="str_d2d_config_ul_bandwidth">uplink bandwidth</string>
    <string name="str_d2d_config_ul_freq_hop">uplink frequency hopping</string>
    <string name="str_d2d_disconnected">disconnected</string>
    <string name="str_d2d_freq_hopping_disabled">disabled</string>
    <string name="str_d2d_freq_hopping_enabled">enabled</string>
    <string name="str_d2d_freq_updt_ctrl_disabled">disabled</string>
    <string name="str_d2d_freq_updt_ctrl_enabled">enabled</string>
    <string name="str_d2d_radio_power_disabled">radio power off</string>
    <string name="str_d2d_radio_power_enabled">radio power on</string>
    <string name="str_load_button">load</string>
    <string name="str_pair_state">Pair state</string>
    <string name="str_plane_qos">plane QOS</string>
    <string name="str_plane_qos_unknown">unknown</string>
    <string name="str_plane_service_state">plane service state</string>
    <string name="str_plane_signal_strength">plane signal strength</string>
    <string name="str_save_button">SAVE</string>
    <string name="str_signal_strength_unknown">unknown</string>
    <string name="token">Token</string>
    <string name="txt_button_add">ADD</string>
    <string name="ul_bandwidth">Uplink bandwidth:</string>
    <string name="uplink_rate">Uplink Rate</string>
    <string name="video_share">Video Sharing</string>
</resources>