<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:tag="layout/activity_button_settings_0" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:id="@id/layout_main" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:id="@id/layout_top" android:paddingLeft="@dimen/padding_medium" android:paddingTop="@dimen/padding_medium" android:paddingRight="@dimen/padding_medium" android:paddingBottom="@dimen/padding_small" android:layout_alignParentTop="true" style="@style/Layout.Horizontal">
            <Spinner android:layout_gravity="center" android:id="@id/button_select" android:padding="@dimen/padding_large" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <Button android:id="@id/btn_do_add" android:layout_width="wrap_content" android:layout_height="40.0dip" android:text="@string/txt_button_add" style="@android:style/Widget.Material.Button.Colored" />
            <View android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_weight="1.0" />
            <Button android:id="@id/btn_do_new" android:layout_width="wrap_content" android:layout_height="40.0dip" android:text="@string/str_btn_do_new" style="@android:style/Widget.Material.Button.Colored" />
            <Button android:id="@id/btn_do_load" android:layout_width="wrap_content" android:layout_height="40.0dip" android:text="@string/str_load_button" style="@android:style/Widget.Material.Button.Colored" />
            <Button android:id="@id/btn_do_save" android:layout_width="wrap_content" android:layout_height="40.0dip" android:text="@string/str_save_button" style="@android:style/Widget.Material.Button.Colored" />
        </LinearLayout>
        <TextView android:textSize="@dimen/textsize_large" android:textStyle="bold|italic" android:textColor="@color/shade_dark" android:layout_gravity="center_horizontal" android:id="@id/tv_file_name" android:background="@color/colorAccent" android:layout_width="fill_parent" android:layout_height="wrap_content" android:textAlignment="center" />
        <LinearLayout android:scrollbarAlwaysDrawVerticalTrack="true" android:orientation="vertical" android:id="@id/button_list_layout" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <androidx.recyclerview.widget.RecyclerView android:id="@id/button_list" android:tag="binding_1" android:scrollbars="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>